Reetan.Nayak Dev 25/force-app/main/default/objects/Batch__c/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <displayFormat>B{00}</displayFormat>
    <label>BatchId</label>
    <type>AutoNumber</type>
</CustomField>