Reetan.Nayak Dev 25/force-app/main/default/objects/Batch__c/fields/CourseId__c.field-meta.xml
<CustomField>
    <fullName>CourseId__c</fullName>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Batchs</relationshipLabel>
    <relationshipName>Batchs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>