Reetan.Nayak Dev 25/force-app/main/default/objects/Batch__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>