Reetan.Nayak Dev 25/force-app/main/default/objects/Batch__c/fields/Faculty_Id__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Batchs</relationshipLabel>
    <relationshipName>Batchs</relationshipName>
    <type>Lookup</type>
</CustomField>