Reetan.Nayak Dev 25/force-app/main/default/objects/Batch__c/fields/Session_Det__c.field-meta.xml
<CustomField>
    <fullName>Session_Det__c</fullName>
    <label>Session Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Include Weekend</fullName>
            </value>
            <value>
                <fullName>Exclude Weekend</fullName>
            </value>
            <value>
                <fullName>Only Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>