Reetan.Nayak Dev 25/force-app/main/default/objects/Batch__c/fields/Time_Diff__c.field-meta.xml
<CustomField>
    <fullName>Time_Diff__c</fullName>
    <label>Time Diff</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>